--- a/pages/mars.html
+++ b/pages/mars.html
@@ -59,6 +59,46 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Mars</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#Name">Name</a>
+                </li>
+                <li>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Size">Size</a>
+                        </li>
+                        <li>
+                            <a href="#InternalStructure">Internal structure</a>
+                        </li>
+                        <li>
+                            <a href="#Surface">Surface</a>
+                        </li>
+                        <li>
+                            <a href="#Hydrology">Hydrology</a>
+                        </li>
+                        <li>
+                            <a href="#AtmosphereAndClimate">Atmosphere and climate</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Satellites">Satellites</a>
+                </li>
+                <li>
+                    <a href="#EarlyObservation">Early observation</a>
+                </li>
+                <li>
+                    <a href="#Exploration">Exploration</a>
+                </li>
+                <li>
+                    <a href="#HabitabilityAndColonisation">Habitability and colonisation</a>
+                </li>
+            </ul>
         </aside>
 
         <!--Title on the main page-->
@@ -75,13 +115,106 @@
                     <p class="caption">Mars</p>
                 </div>
                 <p class="paragraph">
-                    Mars is the fourth planet in the Solar System. 
-                    It is smaller than Venus and larger than Mercury. 
+                    Mars is the fourth <a href="planet.html">planet</a> from the Sun and the second smallest in the Solar System.   
                     Mars is named after the Roman god of war. 
-                    Volcanism exists on Mars - the highest known mountain in the Solar System is Olympus Mons - 21,229 m. 
-                    Craters are mostly concentrated in the south, where the surface is older. 
-                    There is ice on Mars and evidences show that liquid water might have existed on the Martian surface, but is currently impossible, due to the low athmospheric pressure. 
+                    It is also known as the Red Planet, the name originating from it's red surface.
+                    The planet has a similar composition to that of <a href="earth.html">Earth</a>, but with a thinner atmosphere.
+                </p>
+                <p class="paragraph">
+                    Mars features some of the largest geological structures in the Solar System like the highest known mountain - Olympus Mons (21,229 m) and the largest canyon Valles Marineris. 
+                    Craters are mostly concentrated in the south, where the surface is older, the biggest of which is Utopia, although the unconfirmed North Polar Basin is bigger. 
+                    There is ice on Mars, most of which is at the poles, with evidences showing that liquid water might have existed at one point on the Martian surface.
+                    Currently no liquid water can remain on the surface, due to the low athmospheric pressure. 
+                </p>
+                <p class="paragraph">
                     There are two satellites orbiting around Mars - Phobos and Deimos.
+                </p>
+                <p class="paragraph">
+                    Mars has been visited by multiple spacecraft, the first success being NASA's Mariner 4.
+                    Other countries have sent their missions, including the Soviet Union (and later Russia), Japan, China and the UAE.
+                    European countries under ESA have also sent missions.
+                    Only the USA, the Soviet Union and China have successfully sent a lander, although the soviet Mars 3 lost connection shortly after landing.
+                </p>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                    The first to name the planet were the Sumerians, giving it the name of the god of war and plague Nergal.
+                    In Ancient Greece, the planet was known as "Pyroeis" (Πυρόεις), or "Areos aster" (Ἄρεως ἀστἡρ), after the Greek god of war Ares.
+                    The modern Greek name is Ares (Άρης).
+                    The Romans also named it after their god of war Mars.
+                    In India the planet is called Mangala (मंगल), which is the god-personification of the planet.
+                    In China and neighboring countries the planet is refered to as "fire star" (火星).
+                </p>
+                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                <p class="paragraph">
+                    Mars has an orbit with a semimajor axis of 1.524 AU and an eccentricity of 0.0934, second only to <a href="mercury.html">Mercury</a>. 
+                    The planet orbits the Sun in 687 days.
+                    The perihelion is 1.3814 AU and the aphelion is 1.666 AU.
+                </p>
+                <p class="paragraph">
+                    The martian solar day (called sol) is 24 hours, 39 minutes, and 35.244 seconds.
+                    The axial tilt is 25.19°, which is close to that of Earth and thus has similar seasons.
+                </p>
+                <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+                <h3 class="paragraphsubheader" id="Size">Size</h3>
+                <p class="paragraph">
+                    Mars is approximately half <a href="earth.html">Earth's</a> diameter and is 15% it's volume.
+                </p>
+                <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+                <p class="paragraph">
+                    Mars has an interior similar to that of Earth. 
+                    It is differentiated into a crust, a rocky mantle and a metallic core.
+                    The crust contains mostly silicates, with common elements being (apart from silicon and oxygen) iron, magnesium and aluminium.
+                    The iron(III) oxide (ferric oxide) gives Mars it's red color.
+                    The Martian mantle is solid and rocky, but is not divided like Earth's inner and outer mantle.
+                    The core contains iron, nickel and sulfur.
+                </p>
+                <h3 class="paragraphsubheader" id="Surface">Surface</h3>
+                <p class="paragraph">
+                    Mars is seismically active, but does not feature tectonic plates like Earth.
+                    There are two major volcanic regions - Tharsis and Elysium.
+                    Tharsis is a region, containing most of the volcanoes on Mars.
+                    Tharsis Montes, a group of three mountains - Ascraeus Mons, Pavonis Mons and Arsia Mons - is located in the center of Tharsis.
+                    Other prominent mountains are Alba Mons and Olympus Mons, which is the highest mountain known at 21,229 m above datum.
+                    Elysium is located west of Tharsis, both separated by Amazonis Planitia.
+                    The tallest mountain is Elysium Mons at 14.1 km above the datum.
+                </p>
+                <p class="paragraph">
+                    Valles Marineris, named after Mariner 9, is a canyon east from Tharsis.
+                    It is long 4,000 km, wide 200 km and deep 7 km, making it the biggest known canyon in the Solar System.
+                    Many theories exist on what might have caused it's formation, like a tectonic rift, or formed by erosion by liquid water.
+                </p>
+                <p class="paragraph">
+                    The Martian surface is heavily cratered, but most craters are located in the south.
+                    The north contains interconnected low-lying plains like Arcadia Planitia, Acidalia Planitia and Utopia Planitia.
+                    This suggests that these plains may have once been covered by a large Martian ocean.
+                    Another big plain is Hellas Planitia, which is not connected to the other and is located in the south hemisphere.
+                    This is where the lowest point on Mars is.
+                </p>
+                <p class="paragraph">
+                    Dark spots on Mars like Syrtis Major are albedo features significantly darker than the surrounding terrain.
+                    The dark colors come from the basaltic volcanic rock of the regions and the relative lack of dust. 
+                </p>
+                <h3 class="paragraphsubheader" id="Hydrology">Hydrology</h3>
+                <p class="paragraph">
+                </p>
+                <h3 class="paragraphsubheader" id="AtmosphereAndClimate">Atmosphere and climate</h3>
+                <p class="paragraph">
+                </p>
+                <p class="paragraph">
+                </p>
+                <p class="paragraph">
+                </p>
+                <h2 class="paragraphheader" id="Satellites">Satellites</h2>
+                <p class="paragraph">
+                </p>
+                <h2 class="paragraphheader" id="EarlyObservation">Early observation</h2>
+                <p class="paragraph">
+                </p>
+                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                <p class="paragraph">
+                </p>
+                <h2 class="paragraphheader" id="HabitabilityAndColonisation">Habitability and colonisation</h2>
+                <p class="paragraph">
                 </p>
             </div>
         </section>
