Finished Mars page

--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -118,37 +118,43 @@
                 <p class="paragraph">
                     Two spacecrafts have visited Mercury - Mariner 10 and MESSENGER and a third - BepiColombo is an ongoing mission.
                 </p>
-                <h2 class="paragraphheader" id="Name">Name</h2>
-                <p class="paragraph">
-                    The planet was known since ancient times and had different names as a morning and an evening star.
-                    The ancient Greeks had realised that the two are a single object.
-                    It was named after Hermes, the swift-footed messenger god, for it's fast movement across the sky.
-                    The Romans gave it the name "Mercurius", which is the name of Hermes' analogue in Roman mythology.
-                </p>
-                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
-                <p class="paragraph">
-                    Mercury has a 3:2 spin-orbit resonance in relation to the fixed <a href="star.html">stars</a>.
-                    One Mercury solar day thus equates to two Mercury years.
-                    In Earth days, one synodic day is almost 176 Earth days, which is three times the sidereal day and the orbital period is 88 days.
-                    Mercury has a very low axial tilt of 1/30 degrees.
-                </p>
-                <p class="paragraph">
-                    Mercury has the highest eccentricity of the planets in the Solar System at 0.21.
-                    The perihelion is 0.307 AU and the aphelion is 0.466 AU.
-                </p>
-                <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
-                <h3 class="paragraphsubheader" id="Size">Size</h3>
-                <p class="paragraph">
-                    Mercury is the smallest planet in the Solar system.
-                    It has an equatorial radius of 2,440 km.
-                    Two natural satellites in the Solar System, Ganymede and Titan, are more massive than Mercury, but have a small mass.
-                </p>
-                <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
-                <p class="paragraph">
-                    Mercury is a terrestrial planet, consisting of 30% silicates and 70% metallic material.
-                    The crust and the mantle are mostly silicates, while the core consists of iron sulfide outside, liquid iron in the middle and solid iron inside.
-                    The high amount of iron makes Mercury the second densest planet after <a href="earth.html">Earth</a>.
-                </p>
+            </div>
+            <h2 class="paragraphheader" id="Name">Name</h2>
+            <p class="paragraph">
+                The planet was known since ancient times and had different names as a morning and an evening star.
+                The ancient Greeks had realised that the two are a single object.
+                It was named after Hermes, the swift-footed messenger god, for it's fast movement across the sky.
+                The Romans gave it the name "Mercurius", which is the name of Hermes' analogue in Roman mythology.
+            </p>
+            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+            <p class="paragraph">
+                Mercury has a 3:2 spin-orbit resonance in relation to the fixed <a href="star.html">stars</a>.
+                One Mercury solar day thus equates to two Mercury years.
+                In Earth days, one synodic day is almost 176 Earth days, which is three times the sidereal day and the orbital period is 88 days.
+                Mercury has a very low axial tilt of 1/30 degrees.
+            </p>
+            <p class="paragraph">
+                Mercury has the highest eccentricity of the planets in the Solar System at 0.21.
+                The perihelion is 0.307 AU and the aphelion is 0.466 AU.
+            </p>
+            <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+            <h3 class="paragraphsubheader" id="Size">Size</h3>
+            <p class="paragraph">
+                Mercury is the smallest planet in the Solar system.
+                It has an equatorial radius of 2,440 km.
+                Two natural satellites in the Solar System, Ganymede and Titan, are more massive than Mercury, but have a small mass.
+            </p>
+            <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+            <p class="paragraph">
+                Mercury is a terrestrial planet, consisting of 30% silicates and 70% metallic material.
+                The crust and the mantle are mostly silicates, while the core consists of iron sulfide outside, liquid iron in the middle and solid iron inside.
+                The high amount of iron makes Mercury the second densest planet after <a href="earth.html">Earth</a>.
+            </p>
+            <div class="articlediv">
+                <div class="captionbox right" style="width:242px">
+                    <img class="articleimage" src="../assets/images/features/caloris-planitia.png" alt="Caloris Planitia" width="240" height="240">
+                    <p class="caption">Mercury's largest impact crater Caloris Planitia</p>
+                </div>
                 <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
                 <p class="paragraph">
                     Mercury has a similar surface to that of the Moon, full of craters and plains (mare).
@@ -164,24 +170,24 @@
                     Mercury is not volcanically active.
                     Despite this evidence for pyroclastic flows can be spotted near low-lying shield volcanoes, implying Mercury used to have volcanism.
                 </p>
-                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
-                <p class="paragraph">
-                    Two missions have taken place and one is currently ongoing.
-                    NASA's Mariner 10 was the first in 1974.
-                    The mission objectives were to measure Mercury's environment, atmosphere, surface, and body characteristics.
-                    It was the first mission to perform multiple planetary flybys.
-                </p>
-                <p class="paragraph">
-                    MESSENGER was NASA's second mission in 2011.
-                    Unlike Mariner 10, MESSENGER enterer Mercury's orbit.
-                    The objectives were to explain Mercury's high density, geological history, nature of its magnetic field and structure of its core.
-                </p>
-                <p class="paragraph">
-                    An ongoing mission between ESA and JAXA, called BepiColombo was launched in 2018.
-                    It is planned to get into Mercury orbit in 2025.
-                    Two probes will be released to study the planet.
-                </p>
             </div>
+            <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+            <p class="paragraph">
+                Two missions have taken place and one is currently ongoing.
+                NASA's Mariner 10 was the first in 1974.
+                The mission objectives were to measure Mercury's environment, atmosphere, surface, and body characteristics.
+                It was the first mission to perform multiple planetary flybys.
+            </p>
+            <p class="paragraph">
+                MESSENGER was NASA's second mission in 2011.
+                Unlike Mariner 10, MESSENGER enterer Mercury's orbit.
+                The objectives were to explain Mercury's high density, geological history, nature of its magnetic field and structure of its core.
+            </p>
+            <p class="paragraph">
+                An ongoing mission between ESA and JAXA, called BepiColombo was launched in 2018.
+                It is planned to get into Mercury orbit in 2025.
+                Two probes will be released to study the planet.
+            </p>
         </section>
 
         <!--A footer-->
