--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -191,20 +191,26 @@
                 The Neptunian mantle is made of ices at a state of critical fluids.
                 Water molecules break down into hydrogen and oxygen ions and rains of diamonds are formed from methane under the high pressure
                 The core is likely a supercritical fluid mix of iron, nickel and silicates, 1.2 times more massive than Earth.
-            <h2 class="paragraphheader" id="Climate">Climate</h2>
-            <p class="paragraph">
-                Neptune weather is more intense than that on Uranus, due to higher internal heating.
-                Winds on Neptune are very dynamic and can reach supersonic speed.
-                More precicely, wind speeds vary between 20 m/s in the easterly direction to 325 m/s westward, with high altitude clouds exceeding 400 m/s.
-                The long orbital period of Neptune causes seasons to last for years.
-                This leads to effects like higher temperatures at one the poles that is facing the Sun.
-            </p>
-            <p class="paragraph">
-                First seen during the Voyager 2 flyby, The Great Dark Spot was a storm similar to Jupiter's Great Red Spot.
-                When Hubble Space Telescope observed Neptune five years later, the storm did not appear.
-                Such storms form regularly and last for months, more recently, in 2018, two storms were spotted in the northern hemisphere.
-                It is believed that these vortexes form in the troposphere.
-            </p>
+            <div class="articlediv">
+                <div class="captionbox right" style="width:263px;">
+                    <img class="articleimage" src="../assets/images/features/neptune-spots.jpg" alt="Neptune spots" width="261" height="240">
+                    <p class="caption">Storms on Neptune at the time of Voyager 2's flyby - Great Dark Spot (top) and Small Dark Spot (bottom)</p>
+                </div>
+                <h2 class="paragraphheader" id="Climate">Climate</h2>
+                <p class="paragraph">
+                    Neptune weather is more intense than that on Uranus, due to higher internal heating.
+                    Winds on Neptune are very dynamic and can reach supersonic speed.
+                    More precicely, wind speeds vary between 20 m/s in the easterly direction to 325 m/s westward, with high altitude clouds exceeding 400 m/s.
+                    The long orbital period of Neptune causes seasons to last for years.
+                    This leads to effects like higher temperatures at one the poles that is facing the Sun.
+                </p>
+                <p class="paragraph">
+                    First seen during the Voyager 2 flyby, The Great Dark Spot was a storm similar to Jupiter's Great Red Spot.
+                    When Hubble Space Telescope observed Neptune five years later, the storm did not appear.
+                    Such storms form regularly and last for months, more recently, in 2018, two storms were spotted in the northern hemisphere.
+                    It is believed that these vortexes form in the troposphere.
+                </p>
+            </div>
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton" width="240" height="240">
