--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -144,7 +144,8 @@
                 <p class="paragraph">
                     <a href="mars.html">Mars</a> has two natural satellites - Phobos and Deimos. 
                     They are named after the Greek gods of fear and terror respectively. 
-                    Phobos is the bigger of the two and orbits closer to Mars. Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
+                    Phobos is the bigger of the two and orbits closer to Mars. 
+                    Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
                 </p>
                 <div class="captionbox center" style="width:375.25px">
                     <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
