--- a/pages/planet.html
+++ b/pages/planet.html
@@ -243,7 +243,7 @@
                     Saturn is known for it's prominent rings. 
                     It is visibly flattened at the poles and features a hexagonal cloud at the north pole. 
                     83 known satellites exist, 53 of them are named. 
-                    The biggest of those moons are Titan, which is bigger than Mercury, Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                    The biggest of those moons are Titan (which is bigger than Mercury), Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
                 </p>
             </div>
             <div class="articlediv">
