--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -59,6 +59,49 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Saturn</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#Name">Name</a>
+                </li>
+                <li>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                </li>
+                <li>
+                    <a href="#Moons">Moons</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Titan">Titan</a>
+                        </li>
+                        <li>
+                            <a href="#Rhea">Rhea</a>
+                        </li>
+                        <li>
+                            <a href="#Iapetus">Iapetus</a>
+                        </li>
+                        <li>
+                            <a href="#Dione">Dione</a>
+                        </li>
+                        <li>
+                            <a href="#Tethys">Tethys</a>
+                        </li>
+                        <li>
+                            <a href="#Enceladus">Enceladus</a>
+                        </li>
+                        <li>
+                            <a href="#Mimas">Mimas</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#EarlyObservations">Early observations</a>
+                </li>
+                <li>
+                    <a href="#Exploration">Exploration</a>
+                </li>
+            </ul>
         </aside>
 
         <!--Title on the main page-->
@@ -75,14 +118,182 @@
                     <p class="caption">Saturn</p>
                 </div>
                 <p class="paragraph">
-                    Saturn is the second largest of the eight planets in the Solar System. 
+                    Saturn is the sixth from the Sun and second largest of the eight <a href="planet.html">planets</a> in the Solar System. 
+                    It is a gas giant like <a href="jupiter.html">Jupiter</a> composed mostly of hydrogen and helium.
                     In Roman mythology, Saturn is the god of time and wealth. 
-                    Saturn is known for it's prominent rings. 
-                    It is visibly flattened at the poles and features a hexagonal cloud at the north pole. 
-                    83 known satellites exist, 53 of them are named. 
-                    The biggest of those moons are Titan, which is bigger than Mercury, Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                </p>
+                <p class="paragraph">
+                    Of all the planets in the Solar System, Saturn is the most flattened at the poles, caused by rotation.
+                    The atmosphere is less dynamic than that of Jupiter and has less features.
+                    Such a feature is the hexagonal cloud at Saturn's north pole. 
+                    Saturn is known for it's prominent rings composed of ice, rock and dust. 
+                    There are 83 known <a href="natural-satellite.html">satellites</a> known to orbit the planet, 53 of them are named. 
+                    The biggest of those moons is Titan, which is bigger than Mercury.
+                    Other notable satellites are Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                    Within the rings are also numerous tiny moonlets.
+                </p>
+                <p class="paragraph">
+                    Four missions visited the Saturn system, the latest of which was Cassini-Huygens.
                 </p>
             </div>
+            <h2 class="paragraphheader" id="Name">Name</h2>
+            <p class="paragraph">
+                Saturn is named after the Roman god of wealth, time and agriculture, father of Jupiter.
+                In Greek, the planet is named "Cronos" (Κρόνος) after the Greek analogue of Saturn.
+                The ancient Greek name was Phainon (Φαίνων).
+                The Hindu god representing the planet is Shani (शनि).
+                In Chinese the planet is known as "earth star" (土星) and the name is also used in other Sinosphere countries (countries culturally influenced by China).
+            </p>
+            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+            <p class="paragraph">
+                The average distance from the Sun is 9 AU.
+                The perihelion and aphelion distances are, respectively, 9.195 and 9.957 AU
+                It takes Saturn 10,759 Earth days to finish one revolution around the Sun.
+            </p>
+            <p class="paragraph">
+                The rotation period of Saturn is different all across the surface.
+                Around the equator and the poles, Saturn has a rotation period of 10h 14m 00s.
+                Across the other latitudes, the period is 10h 38m 25.4s.
+                The internal rotation period is around 10h 39m 22.4s.
+                Saturn has an axial tilt of 26.73°.
+            </p>
+            <p class="paragraph">
+            </p>
+            <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+            <p class="paragraph">
+                Saturn is an oblate spheroid with an average radius of about nine and a half times that of <a href="earth.html">Earth</a>.
+                It is the most flattened of all the planets at 9.8%.
+            </p>
+            <h2 class="paragraphheader" id="Moons">Moons</h2>
+            <p class="paragraph">
+                There are 83 <a href="natural-satellite.html">moons</a> known to orbit Saturn. 
+                The earliest discovered ones were named after Titans and Giants from Greek mythology. 
+                Subsequent moons were named after other Greek mythological figures, Celtic and Inuit gods and Norse ice giants.
+                The biggest moon is Titan, a satellite bigger than the planet <a href="mercury.html">Mercury</a>. 
+                Other round moons are Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+            </p>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan" width="180" height="180">
+                    <p class="caption">Titan</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Titan">Titan</h3>
+                <p class="paragraph">
+                    Titan is the biggest satellite orbiting Saturn and is one of two satellites bigger than the planet <a href="mercury.html">Mercury</a>, the other being the Jovian moon Ganymede. 
+                    Titan has a thick orange athmosphere composed mostly of nitrogen and methane. 
+                    Liquid methane lakes are concentrated around the poles, the only possible spots on the surface for them to form.
+                    The biggest lakes are Kraken Mare and Ligeia Mare.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea" width="180.75" height="180">
+                    <p class="caption">Rhea</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Rhea">Rhea</h3>
+                <p class="paragraph">
+                    Rhea is the second largest moon of Saturn.
+                    The surface is heavily cratered and has some fractures (chasmata) similar to other cratered planetary bodies.
+                    It is hypothesised that Rhea might have a tenuous ring system.
+                    If confirmed, this would mark the first discovery of rings around a moon.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus" width="180" height="180">
+                    <p class="caption">Iapetus</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Iapetus">Iapetus</h3>
+                <p class="paragraph">
+                    Iapetus is the third biggest moon of Saturn.
+                    It is composed mostly of ice and has different coloration on both hemispheres.
+                    A mountain ridge along the equator is still unexplained, but one suggestion is that it might have been a collapsed ring system.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione" width="180" height="180">
+                    <p class="caption">Dione</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Dione">Dione</h3>
+                <p class="paragraph">
+                    Dione is the fourth biggest Saturnian moon.
+                    Similar to Rhea, Dione is heavily cratered, but features more chasmata and fossae (ridges).
+                    Dione has two trojans, which are also moons of Saturn - Helene and Polydeuces.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys" width="180" height="180">
+                    <p class="caption">Tethys</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Tethys">Tethys</h3>
+                <p class="paragraph">
+                    Tethys is the fifth biggest satellite of Saturn.
+                    It is an icy body and has one of the biggest craters on planetary bodies in the Solar System - Odysseus.
+                    Just like Dione, Tethys has two trojans that orbit Saturn - Telesto and Calypso.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="179" height="180">
+                    <p class="caption">Enceladus</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Enceladus">Enceladus</h3>
+                <p class="paragraph">
+                    Enceladus is the sixth biggest moon of Saturn.
+                    It is composed mostly of ice water.
+                    Apart from craters, ridges and fractures, it has numerous geysers that shoot water vapors into space, part of which falls back as snow.
+                    It is suspected that liquid water ocean is underneath the ice crust.
+                    The future mission Dragonfly is planned to search for life on Enceladus.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas" width="180" height="180">
+                    <p class="caption">Mimas</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Mimas">Mimas</h3>
+                <p class="paragraph">
+                    Mimas is the smallest of the seven gravitationally-rounded moons of Saturn.
+                    It is smaller than the irregularly-shaped moon of Neptune Proteus.
+                    A distinctive feature is the crater Herschel, named after the discoverer of Mimas.
+                    The moon resembles the fictional Death Star in Star Wars.
+                </p>
+            </div>
+            <h2 class="paragraphheader" id="EarlyObservations">Early observations</h2>
+            <p class="paragraph">
+                The planet is one of the planets known in ancient times.
+                Galileo was the first to look through a telescope at the planet.
+                He was unable to resolve Saturn's rings, thinking they were two moons.
+                Cristiaan Huygens used a telescope with greater magnification.
+                He was the first to distinguish the ring system of Saturn and discovered the biggest moon - Titan.
+                Giovanni Domenico Cassini discovered four more moons - Iapetus, Rhea, Tethys and Dione.
+                William Herschel discovered the last two round moons - Mimas and Enceladus.
+                The first irregularly shaped satellite to be discovered was Hyperion and the first irregularly orbiting was Phoebe.
+            </p>
+            <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+            <p class="paragraph">
+                NASA's first mission to Saturn was Pioneer 11, which made the a flyby of Saturn in September 1979, when it passed within 20,000 km of the planet.
+                Images were taken of the planet and a few of its moons, at a resolution too low to discern any surface detail.
+                The spacecraft also studied the planet's rings, revealing the thin F-ring.
+            </p>
+            <p class="paragraph">
+                The Voyager 1 probe managed to send back the first high-resolution images of the planet, its rings and satellites.
+                Surface features of various moons were seen for the first time.
+                Voyager 1 performed a close flyby of Titan, studying the atmosphere of the moon.
+                The thickness of the atmosphere prevented surface details to be revealed.
+                A year later Voyager 2 passed the Saturn system, collecting further information about the planet.
+                Both missions discovered new satellites around Saturn.
+            </p>
+            <p class="paragraph">
+                ESA joined NASA to launch the Cassini-Huygens spacecraft.
+                Cassini completed two flybys around Titan before releasing the Huygens lander.
+                Discoveries during the mission were evidences of liquid water beneath the Enceladus surface and geysers, hydrocarbon lakes on Titan and new satellites of Saturn.
+            </p>
+            <p class="paragraph">
+                Proposed missions include a proposed Saturn entry probe and Dragonfly, which will search for life on Titan and Enceladus.
+            </p>
         </section>
 
         <!--A footer-->
